@@ -1,5 +1,6 @@
 Version 5.7.0 (TBD)
     Changed the `lists` plugin to apply list styles to all text blocks within a selection #TINY-3755
+    Added new setting `fonts_css` for fonts to be added to both containing document and the editor #TINY-6199
     Changed the `advlist` plugin to log a console error message when the `list` plugin isn't enabled #TINY-6585
     Changed the z-index of the `setProgressState(true)` throbber so it does not hide notifications #TINY-6686
     Fixed the plugin documentation links in the `help` plugin #DOC-703
